src/base/objects/Opportunity/Opportunity.object-meta.xml
<CustomObject>
    <sharingModel>Read</sharingModel>
</CustomObject>