src/base/objects/Opportunity/fields/Already_Connected__c.field-meta.xml
<CustomField>
    <fullName>Already_Connected__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Mark this field if the account has a pre-existing connection for this product at time of opportunity creation</inlineHelpText>
    <label>Already Connected?</label>
    <type>Checkbox</type>
</CustomField>