src/base/objects/Opportunity/fields/Amount_Override__c.field-meta.xml
<CustomField>
    <fullName>Amount_Override__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Don&apos;t change.</inlineHelpText>
    <label>Amount Override</label>
    <type>Checkbox</type>
</CustomField>