src/base/objects/Opportunity/fields/Auto_Connect_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Auto_Connect_Enabled__c</fullName>
    <label>Auto-Connect Enabled</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>