src/base/objects/Opportunity/fields/Auto_Conversion_On__c.field-meta.xml
<CustomField>
    <fullName>Auto_Conversion_On__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Conversion On?</label>
    <type>Checkbox</type>
</CustomField>