src/base/objects/Opportunity/fields/Auto_Renewal__c.field-meta.xml
<CustomField>
    <fullName>Auto_Renewal__c</fullName>
    <businessOwnerGroup>Data_Owner_Sales_Trading_Prime</businessOwnerGroup>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Checking this option will automatically create a new renewal opportunity when this opportunity’s stage is updated to Closed Won</inlineHelpText>
    <label>Auto-Renewal?</label>
    <type>Checkbox</type>
</CustomField>