src/base/objects/Opportunity/fields/Average_Transaction_Amount__c.field-meta.xml
<CustomField>
    <fullName>Average_Transaction_Amount__c</fullName>
    <label>Average Transaction Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>