src/base/objects/Opportunity/fields/Blocked_Reason__c.field-meta.xml
<CustomField>
    <fullName>Blocked_Reason__c</fullName>
    <label>Blocked Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Blocked_Reason</valueSetName>
    </valueSet>
</CustomField>