src/base/objects/Opportunity/fields/Blocker_Revisit_Date__c.field-meta.xml
<CustomField>
    <fullName>Blocker_Revisit_Date__c</fullName>
    <description>[SFCC-671]: Opportunity Wallet field, if Opportunity is temporary Blocked, (optional) Enter re-visit date.</description>
    <inlineHelpText>New information should be available by this date or the opportunity is expected to be unblocked by this date.</inlineHelpText>
    <label>Blocker Revisit Date</label>
    <type>Date</type>
</CustomField>