src/base/objects/Opportunity/fields/Commerce_Addendum_Signed__c.field-meta.xml
<CustomField>
    <fullName>Commerce_Addendum_Signed__c</fullName>
    <label>Commerce Addendum Signed</label>
    <type>Date</type>
</CustomField>