src/base/objects/Opportunity/fields/Competitors__c.field-meta.xml
<CustomField>
    <fullName>Competitors__c</fullName>
    <description>[SFCC-671] Opportunity Wallet Record Type Field</description>
    <label>Wallet Competitors</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Competitors</valueSetName>
    </valueSet>
</CustomField>