src/base/objects/Opportunity/fields/Compliance_Failure_Reason__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Failure_Reason__c</fullName>
    <label>Compliance Failure Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>