src/base/objects/Opportunity/fields/Compliance_Status__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Status__c</fullName>
    <label>Compliance Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>