src/base/objects/Opportunity/fields/Contract_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_End_Date__c</fullName>
    <businessOwnerGroup>Data_Owner_Sales_Trading_Prime</businessOwnerGroup>
    <inlineHelpText>Analytics contract end date</inlineHelpText>
    <label>Contract End Date</label>
    <type>Date</type>
</CustomField>