src/base/objects/Opportunity/fields/Contract_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Sent_Date__c</fullName>
    <inlineHelpText>On which date was the contract sent to the partner?</inlineHelpText>
    <label>Contract Sent Date</label>
    <type>Date</type>
</CustomField>