src/base/objects/Opportunity/fields/Contract_Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Signed_Date__c</fullName>
    <inlineHelpText>On which date was the contract signed by the partner?</inlineHelpText>
    <label>Contract Signed Date</label>
    <type>Date</type>
</CustomField>