src/base/objects/Opportunity/fields/Contract_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Start_Date__c</fullName>
    <businessOwnerGroup>Data_Owner_Sales_Trading_Prime</businessOwnerGroup>
    <inlineHelpText>Analytics contract start date</inlineHelpText>
    <label>Contract Start Date</label>
    <type>Date</type>
</CustomField>