src/base/objects/Opportunity/fields/Dapp_Url__c.field-meta.xml
<CustomField>
    <fullName>Dapp_Url__c</fullName>
    <label>Dapp Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>