src/base/objects/Opportunity/fields/Data_Utilization_Marketplace__c.field-meta.xml
<CustomField>
    <fullName>Data_Utilization_Marketplace__c</fullName>
    <businessOwnerGroup>Data_Owner_Sales_Trading_Prime</businessOwnerGroup>
    <label>Data Utilization: Marketplace</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Internally</fullName>
            </value>
            <value>
                <fullName>Externally</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>