src/base/objects/Opportunity/fields/Date_Override__c.field-meta.xml
<CustomField>
    <fullName>Date_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Date Override</label>
    <type>Checkbox</type>
</CustomField>