src/base/objects/Opportunity/fields/Debrief_Call_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>Debrief_Call_Scheduled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Debrief Call Scheduled</label>
    <type>Checkbox</type>
</CustomField>