src/base/objects/Opportunity/fields/DmP_OKR_Cohort_Other__c.field-meta.xml
<CustomField>
    <fullName>DmP_OKR_Cohort_Other__c</fullName>
    <label>DmP OKR Cohort Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>