src/base/objects/Opportunity/fields/Eligibility__c.field-meta.xml
<CustomField>
    <fullName>Eligibility__c</fullName>
    <formula>Account.Eligibility__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Eligibility</label>
    <type>Text</type>
</CustomField>