src/base/objects/Opportunity/fields/Estimated_Value__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Value__c</fullName>
    <inlineHelpText>This is an estimate of the Opportunity&apos;s value. This should only be used in early stages of the pipeline.</inlineHelpText>
    <label>Estimated Value</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low (&lt;70k)</fullName>
            </value>
            <value>
                <fullName>Mid (&gt;70k, &lt;300k)</fullName>
            </value>
            <value>
                <fullName>High (&gt;300k)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>