src/base/objects/Opportunity/fields/GACLIENTID__c.field-meta.xml
<CustomField>
    <fullName>GACLIENTID__c</fullName>
    <label>GACLIENTID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>