src/base/objects/Opportunity/fields/Ideal_Timezone__c.field-meta.xml
<CustomField>
    <fullName>Ideal_Timezone__c</fullName>
    <description>The ideal timezone of this opportunity for onboardings, communication, etc.</description>
    <inlineHelpText>The ideal timezone of this opportunity for onboardings, communication, etc. Required to move a deal to Trial or Closed Won.</inlineHelpText>
    <label>Ideal Timezone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Timezones</valueSetName>
    </valueSet>
</CustomField>