src/base/objects/Opportunity/fields/Implementation_Owner__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Implementation Owner</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.Implementation_Owner__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunity</relationshipName>
    <type>Lookup</type>
</CustomField>