src/base/objects/Opportunity/fields/Internal_Review_Status__c.field-meta.xml
<CustomField>
    <fullName>Internal_Review_Status__c</fullName>
    <label>Internal Review Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Not Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>