src/base/objects/Opportunity/fields/Ironclad_Workflow__c.field-meta.xml
<CustomField>
    <fullName>Ironclad_Workflow__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ironclad Workflow</label>
    <referenceTo>ironclad__Ironclad_Workflow__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>