src/base/objects/Opportunity/fields/IsClosedDate_Current_Year__c.field-meta.xml
<CustomField>
    <fullName>IsClosedDate_Current_Year__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SFCC-1355: if ClosedDate lies under current year, flow auto update this field to checked. If ClosedDate does not lies in current year by next year 1 Jan, auto schedule flow update this field to unchecked.</description>
    <label>ClosedDate Current Year?</label>
    <type>Checkbox</type>
</CustomField>