src/base/objects/Opportunity/fields/Lead_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Lead_Assessment__c</fullName>
    <businessOwnerGroup>Data_Owner_Sales_Trading_Prime</businessOwnerGroup>
    <description>SFDCCCM-4110</description>
    <label>Lead Assessment</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lead_Assessment</valueSetName>
    </valueSet>
</CustomField>