src/base/objects/Opportunity/fields/Legal_Entity__c.field-meta.xml
<CustomField>
    <fullName>Legal_Entity__c</fullName>
    <inlineHelpText>The legal entity for the MSA (typically Coinbase Crypto Services, LLC)</inlineHelpText>
    <label>Legal Entity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Coinbase Crypto Services, LLC</fullName>
            </value>
            <value>
                <fullName>Coinbase Cloud Pte. Ltd.</fullName>
            </value>
            <value>
                <fullName>Bison Trails International</fullName>
                <isActive>false</isActive>
                <label>Bison Trails International</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>