src/base/objects/Opportunity/fields/License_Type__c.field-meta.xml
<CustomField>
    <fullName>License_Type__c</fullName>
    <businessOwnerGroup>Data_Owner_Sales_Trading_Prime</businessOwnerGroup>
    <label>License Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Display</fullName>
            </value>
            <value>
                <fullName>Redistribute</fullName>
            </value>
            <value>
                <fullName>Derived Data</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>