src/base/objects/Opportunity/fields/Loss_Reason__c.field-meta.xml
<CustomField>
    <fullName>Loss_Reason__c</fullName>
    <label>Loss Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>BT Decision</fullName>
            </value>
            <value>
                <fullName>BT Service Related - Missing Functionality / Product</fullName>
            </value>
            <value>
                <fullName>BT Service Related - Other</fullName>
            </value>
            <value>
                <fullName>BT Service Related - Price Sensitivity / Competition</fullName>
            </value>
            <value>
                <fullName>Chain support: Optimism</fullName>
            </value>
            <value>
                <fullName>Chain support: Other</fullName>
            </value>
            <value>
                <fullName>Chain support: Polygon</fullName>
            </value>
            <value>
                <fullName>Clean-up</fullName>
            </value>
            <value>
                <fullName>Competition</fullName>
            </value>
            <value>
                <fullName>Contract no longer valid</fullName>
            </value>
            <value>
                <fullName>Dead Project</fullName>
            </value>
            <value>
                <fullName>Gambling/High Risk</fullName>
            </value>
            <value>
                <fullName>Ineligible</fullName>
            </value>
            <value>
                <fullName>Integration On Hold</fullName>
            </value>
            <value>
                <fullName>Limited Engagement</fullName>
            </value>
            <value>
                <fullName>Negative PR</fullName>
            </value>
            <value>
                <fullName>No Decision / Non-Responsive</fullName>
            </value>
            <value>
                <fullName>Non-BT Service Related - Asset Liquidation</fullName>
            </value>
            <value>
                <fullName>Non-BT Service Related - Other</fullName>
            </value>
            <value>
                <fullName>Non-BT Service Related - Protocol Issues</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
                <label>Other (Specify in Description)</label>
            </value>
            <value>
                <fullName>Phishing/Spam</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Product does not meet expectations</fullName>
            </value>
            <value>
                <fullName>Scam</fullName>
            </value>
            <value>
                <fullName>Terminated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>