src/base/objects/Opportunity/fields/No_Onboarding_Required__c.field-meta.xml
<CustomField>
    <fullName>No_Onboarding_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>OPS 5156 - This field is now deprecated/no longer in use.</description>
    <inlineHelpText>This field is deprecated. Check this box if this Opportunity does not require a CS Onboarding ticket.</inlineHelpText>
    <label>No Onboarding Required</label>
    <type>Checkbox</type>
</CustomField>