src/base/objects/Opportunity/fields/Node_Count__c.field-meta.xml
<CustomField>
    <fullName>Node_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of nodes on opportunity.</description>
    <label>Node Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>