src/base/objects/Opportunity/fields/Notable_Deal__c.field-meta.xml
<CustomField>
    <fullName>Notable_Deal__c</fullName>
    <businessOwnerGroup>Data_Owner_Sales_Trading_Prime</businessOwnerGroup>
    <defaultValue>false</defaultValue>
    <label>Notable Deal</label>
    <type>Checkbox</type>
</CustomField>