src/base/objects/Opportunity/fields/Num_Opportunity_Nodes__c.field-meta.xml
<CustomField>
    <fullName>Num_Opportunity_Nodes__c</fullName>
    <label>Num. Opportunity Nodes</label>
    <summaryForeignKey>BT_Product__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>