src/base/objects/Opportunity/fields/Number_of_Transactions_per_Month__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Transactions_per_Month__c</fullName>
    <label>Number of Transactions per Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>