src/base/objects/Opportunity/fields/Onboarding_Required__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Required__c</fullName>
    <description>OPS-5156</description>
    <inlineHelpText>Please denote whether this customer requires an Onboarding or New Asset Case created. This field is required when the Opportunity is Closed Won.</inlineHelpText>
    <label>Onboarding Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>New Customer - Onboard</fullName>
            </value>
            <value>
                <fullName>Existing Customer - Onboard</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
                <isActive>false</isActive>
                <label>Yes</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>