src/base/objects/Opportunity/fields/Opportunity_60_Day_Reminder__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_60_Day_Reminder__c</fullName>
    <businessOwnerGroup>Data_Owner_Sales_Trading_Prime</businessOwnerGroup>
    <defaultValue>false</defaultValue>
    <label>Opportunity 60 Day Reminder</label>
    <type>Checkbox</type>
</CustomField>