src/base/objects/Opportunity/fields/Opportunity_90_Day_Reminder__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_90_Day_Reminder__c</fullName>
    <businessOwnerGroup>Data_Owner_Sales_Trading_Prime</businessOwnerGroup>
    <defaultValue>false</defaultValue>
    <label>Opportunity 90 Day Reminder</label>
    <type>Checkbox</type>
</CustomField>