src/base/objects/Opportunity/fields/Other_Loss_Reason__c.field-meta.xml
<CustomField>
    <fullName>Other_Loss_Reason__c</fullName>
    <inlineHelpText>Enter a different loss reason if any of the above choices do not apply.</inlineHelpText>
    <label>Other Loss Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>