src/base/objects/Opportunity/fields/Pay_OKR_Cohort__c.field-meta.xml
<CustomField>
    <fullName>Pay_OKR_Cohort__c</fullName>
    <label>Pay OKR Cohort</label>
    <length>255</length>
    <type>Text</type>
</CustomField>