src/base/objects/Opportunity/fields/Previously_Closed__c.field-meta.xml
<CustomField>
    <fullName>Previously_Closed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Previously Closed</label>
    <type>Checkbox</type>
</CustomField>