src/base/objects/Opportunity/fields/Product_Interest_Temp__c.field-meta.xml
<CustomField>
    <fullName>Product_Interest_Temp__c</fullName>
    <label>Product Interest Temp</label>
    <length>255</length>
    <type>Text</type>
</CustomField>