src/base/objects/Opportunity/fields/Products__c.field-meta.xml
<CustomField>
    <fullName>Products__c</fullName>
    <businessOwnerGroup>Data_Owner_Sales_Trading_Prime</businessOwnerGroup>
    <label>Products</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prime</fullName>
            </value>
            <value>
                <fullName>Exchange</fullName>
            </value>
            <value>
                <fullName>Custody</fullName>
            </value>
            <value>
                <fullName>Trade Finance</fullName>
            </value>
            <value>
                <fullName>Custody Lending</fullName>
            </value>
            <value>
                <fullName>Shorting</fullName>
            </value>
            <value>
                <fullName>Margin</fullName>
            </value>
            <value>
                <fullName>Enhanced Cash</fullName>
            </value>
            <value>
                <fullName>Marketplace</fullName>
            </value>
            <value>
                <fullName>Exchange API</fullName>
            </value>
            <value>
                <fullName>Prime Analytics</fullName>
            </value>
            <value>
                <fullName>Coinbase Managed Commerce</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>