src/base/objects/Opportunity/fields/Protocols__c.field-meta.xml
<CustomField>
    <fullName>Protocols__c</fullName>
    <description>The protocols associated with this opportunity.</description>
    <label>Protocols</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Protocol_List</valueSetName>
    </valueSet>
</CustomField>