src/base/objects/Opportunity/fields/Rebating__c.field-meta.xml
<CustomField>
    <fullName>Rebating__c</fullName>
    <defaultValue>false</defaultValue>
    <description>[SFCC-1539]: As a cloud sales user, I want to specifically be able track opportunities that have rebating associated with the deal.</description>
    <label>Rebating?</label>
    <type>Checkbox</type>
</CustomField>