src/base/objects/Opportunity/fields/Solutions_Architect__c.field-meta.xml
<CustomField>
    <fullName>Solutions_Architect__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Solutions Architect</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.Solutions_Architect__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>