src/base/objects/Opportunity/fields/Success_Metric__c.field-meta.xml
<CustomField>
    <fullName>Success_Metric__c</fullName>
    <label>Success Metric</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Users</fullName>
            </value>
            <value>
                <fullName>MTU Impact</fullName>
            </value>
            <value>
                <fullName>Revenue</fullName>
            </value>
            <value>
                <fullName>Education/Awareness</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>