src/base/objects/Opportunity/fields/Success_Metric_Estimate__c.field-meta.xml
<CustomField>
    <fullName>Success_Metric_Estimate__c</fullName>
    <label>Success Metric Estimate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>