src/base/objects/Opportunity/fields/Survey_Sent__c.field-meta.xml
<CustomField>
    <fullName>Survey_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Mark this box once a post-integration survey has been sent. Required for Closed Won.</inlineHelpText>
    <label>Survey Sent</label>
    <type>Checkbox</type>
</CustomField>