src/base/objects/Opportunity/fields/Total_Cash_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Cash_Value__c</fullName>
    <label>Total Cash Value</label>
    <summarizedField>OpportunityLineItem.SubTotal_Node_Value__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>